@@ -12,10 +12,10 @@ output "host" {
 
 output "hostmap" {
   value = tomap(local.cluster_instances)
-} 
+}
 
 locals {
-    public_ip = { for hostname, v in tomap(local.cluster_instances): "${hostname}" => aws_instance.host[hostname].public_ip }
+  public_ip = { for hostname, v in tomap(local.cluster_instances) : "${hostname}" => aws_instance.host[hostname].public_ip }
 }
 output "public_ip" {
   value = local.public_ip
